platform/argocd/argocd-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-loadbalancer
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/component: server
    # CRITICAL: BGP advertisement labels for Cilium
    bgp.cilium.io/ip-pool: default
    bgp.cilium.io/advertise-service: default
  annotations:
    # Specify exact IP from BGP pool (172.20.10.0/24)
    io.cilium/lb-ipam-ips: "172.20.10.20"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8080
      protocol: TCP
  sessionAffinity: ClientIP
